Updated index.html to correct for missing / in closing tag of section. Updated style.css to add margin to the bottom of section to create spacing between the footer and the section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ section {
     background-color: gray;
     display: flex;
     flex-wrap: wrap;
-    margin: 50px auto 50px auto;
+    margin: 50px auto 200px auto;
     width: 480px;
     /* height: 600px; */
     padding: 10px;
